<resources>
    <string name="app_name">TangoNochesTeacher</string>

    <string name="dialog_default_message">Dialog message</string>
    <string name="dialog_default_positive_button">Positive</string>
    <string name="dialog_default_negative_button">Negative</string>
    <string name="dialog_default_neutral_button">Neutral</string>

    <string name="act_login_email_et_hint">Email</string>
    <string name="act_login_password_et_hint">Пароль</string>
    <string name="act_login_login_btn">Войти</string>
    <string name="title_activity_main_drawer">MainDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Учитель</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="menu_lessons_title">Уроки</string>
    <string name="menu_lessons_all">Все уроки</string>
    <string name="menu_lessons_add">Добавить</string>
    <string name="menu_lessons_detail">Редактировать урок</string>

    <string name="menu_tickets_title">Абонементы</string>
    <string name="menu_tickets_all">Все абонементы</string>
    <string name="menu_tickets_add">Добавить</string>

    <string name="lesson_detail_name_title">Редактировать урок</string>
    <string name="lesson_detail_name_menu_delete">удалить урок</string>
    <string name="lesson_detail_name_hint">Название урока</string>
    <string name="lesson_detail_group_hint">Группа</string>
    <string name="lesson_detail_save">Сохранить</string>
    <string name="lesson_detail_delete_dialog_message">Дейсвительно удалить урок?</string>
    <string name="lesson_detail_delete_dialog_positive">Удалить</string>
    <string name="lesson_detail_delete_dialog_negative">Отмена</string>

    <string name="scan_students_title">Добавление ученика</string>
    <string name="scan_students_confirm">Готово</string>

    <string name="btn_list_visibility">Показать\Скрыть список</string>

    <string name="menu_students_all_title">Ученики</string>
    <string name="menu_student_detail_title">Редактирование ученика</string>

    <string name="student_detail_title">Редактирование ученика</string>
    <string name="student_detail_menu_delete">Удалить ученика</string>
    <string name="student_detail_hint_name">Имя</string>
    <string name="student_detail_hint_phone">Телефон</string>
    <string name="student_detail_hint_vk">Старинца ВК</string>
    <string name="student_detail_hint_facebook">Страница фейсбук</string>
    <string name="student_detail_hint_instagram">Страница инстаграмм</string>
    <string name="student_detail_hint_extra_info">Дополнительная информация</string>
    <string name="student_detail_hint_barcode_id">Номер клубной карты</string>
    <string name="student_detail_hint_points">Баллы</string>
    <string name="student_detail_save_btn">Сохранить</string>
    <string name="student_detail_delete_dialog_message">Дейсвительно удалить ученика?</string>
    <string name="student_detail_delete_dialog_positive">Удалить</string>
    <string name="student_detail_delete_dialog_negative">Отмена</string>

    <string name="ticket_create_title">Добавить абонемент</string>
    <string name="ticket_create_student_hint">Выберите ученика</string>
    <string name="ticket_create_teacher_hint">Выберите преподователя</string>
    <string name="ticket_create_date_start_hint">Дата начала</string>
    <string name="ticket_create_date_end_hint">Дата окончания</string>
    <string name="ticket_create_event_type_hint">Тип абонемента</string>
    <string name="ticket_create_count_type_hint">Количество занятий</string>
    <string name="ticket_create_extra_lessons_hint">Корректировка количества</string>
    <string name="ticket_create_is_in_pair_hint">В паре</string>
    <string name="ticket_create_is_nullify_hint">Обнулить существующие уроки</string>
    <string name="ticket_create_save_btn">Сохранить</string>
</resources>
