<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/frag_student_detail_name_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_margin"
            android:layout_marginTop="@dimen/base_margin_half"
            android:layout_marginEnd="@dimen/base_margin"
            android:layout_marginBottom="@dimen/base_margin_half"
            android:hint="@string/student_detail_hint_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/frag_student_detail_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/frag_student_detail_phone_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_margin"
            android:layout_marginTop="@dimen/base_margin_half"
            android:layout_marginEnd="@dimen/base_margin"
            android:layout_marginBottom="@dimen/base_margin_half"
            android:hint="@string/student_detail_hint_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/frag_student_detail_phone_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/frag_student_detail_barcode_id_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_margin"
            android:layout_marginTop="@dimen/base_margin_half"
            android:layout_marginEnd="@dimen/base_margin"
            android:layout_marginBottom="@dimen/base_margin_half"
            android:hint="@string/student_detail_hint_barcode_id">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/frag_student_detail_barcode_id_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/frag_student_detail_extra_info_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_margin"
            android:layout_marginTop="@dimen/base_margin_half"
            android:layout_marginEnd="@dimen/base_margin"
            android:layout_marginBottom="@dimen/base_margin_half"
            android:hint="@string/student_detail_hint_extra_info">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/frag_student_detail_extra_info_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/frag_student_detail_vk_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_margin"
            android:layout_marginTop="@dimen/base_margin_half"
            android:layout_marginEnd="@dimen/base_margin"
            android:layout_marginBottom="@dimen/base_margin_half"
            android:hint="@string/student_detail_hint_vk">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/frag_student_detail_vk_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/frag_student_detail_facebook_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_margin"
            android:layout_marginTop="@dimen/base_margin_half"
            android:layout_marginEnd="@dimen/base_margin"
            android:layout_marginBottom="@dimen/base_margin_half"
            android:hint="@string/student_detail_hint_facebook">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/frag_student_detail_facebook_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/frag_student_detail_instagram_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_margin"
            android:layout_marginTop="@dimen/base_margin_half"
            android:layout_marginEnd="@dimen/base_margin"
            android:layout_marginBottom="@dimen/base_margin_half"
            android:hint="@string/student_detail_hint_instagram">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/frag_student_detail_instagram_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/frag_student_detail_save_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/base_margin"
            android:layout_marginTop="@dimen/base_margin_half"
            android:layout_marginEnd="@dimen/base_margin"
            android:layout_marginBottom="@dimen/base_margin_half"
            android:text="@string/student_detail_save_btn" />
    </LinearLayout>
</ScrollView>